--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body, html, #root {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  /* display: flex; ve place-items: center; kaldırıldı */
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; height: 100% ile değiştirildi */
+  background-color: #000; /* Arka planı siyah yapalım */
+  position: relative; /* İçerik konumlandırması için */
+  overflow-x: hidden; /* Yatay kaydırmayı engelle */
 }
 
 h1 {
