--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,22 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   text-align: center;
   box-sizing: border-box;
+  overflow: hidden;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 @media (max-width: 600px) {
   #root {
-    padding: 0.5rem;
+    padding: 0;
   }
 }
 
