--- a/src/App.css
+++ b/src/App.css
@@ -110,27 +110,23 @@ button, a, [role="button"], input[type="submit"] {
     line-height: 1.6 !important;
   }
   
-  .nav-links {
-    display: none;
+  .navbar-container {
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
   
-  .nav-links.nav-links-mobile {
-    position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
-    bottom: 0 !important;
-    width: 100% !important;
-    height: 100vh !important;
-    background-color: var(--bg-color) !important;
+  .mobile-menu-button {
+    display: block !important;
+  }
+  
+  .nav-links {
+    display: none !important;
+  }
+  
+  .nav-links-mobile {
     display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important;
-    align-items: center !important;
-    z-index: 999 !important;
-    padding: 50px 20px !important;
-    list-style: none !important;
-    margin: 0 !important;
   }
   
   .mobile-nav-item {
@@ -140,14 +136,6 @@ button, a, [role="button"], input[type="submit"] {
   .mobile-nav-item .nav-link {
     font-size: 1.2rem !important;
     padding: 12px 20px !important;
-  }
-  
-  .mobile-menu-button {
-    display: block !important;
-  }
-  
-  .navbar-container {
-    top: 15px !important;
   }
   
   .navbar {
